--- a/settings.ini
+++ b/settings.ini
@@ -1,67 +1,27 @@
 [DEFAULT]
-# All sections below are required unless otherwise specified
 host = github
 lib_name = rxnfp
-
-user = pschwllr # change that to rxn4chemistry
+user = rxn4chemistry
 description = chemical reaction fingerprints
 keywords = chemical reactions fingerprints classification
 author = Philippe Schwaller
 author_email = phs@zurich.ibm.com
 copyright = RXN for Chemistry team / University of Bern
 branch = master
-version = 0.0.1
+version = 0.0.5
 min_python = 3.6
 audience = Developers
 language = English
-# Set to True if you want to create a more fancy sidebar.json than the default
 custom_sidebar = True
-# Add licenses and see current list in `setup.py`
 license = mit
-# From 1-7: Planning Pre-Alpha Alpha Beta Production Mature Inactive
 status = 2
-
-# Optional. Same format as setuptools requirements
 requirements = transformers==2.5.1 torch>=1.3.1 scipy==1.4.1 scikit-learn==0.23.1  matplotlib==3.2.2 faerun==0.3.20
-# Optional. Same format as setuptools console_scripts
-# console_scripts = 
-# Optional. Same format as setuptools dependency-links
-# dep_links = 
-
-###
-# You probably won't need to change anything under here,
-#   unless you have some special requirements
-###
-
-# Change to, e.g. "nbs", to put your notebooks in nbs dir instead of repo root
 nbs_path = nbs
 doc_path = docs
-
-# Anything shown as '%(...)s' is substituted with that setting automatically
 doc_host =  https://%(user)s.github.io
-#For Enterprise Git pages use:  
-#doc_host = https://pages.github.%(company_name)s.com.  
-
-
-doc_baseurl = /%(lib_name)s/
-# For Enterprise Github pages docs use:
-# doc_baseurl = /%(repo_name)s/%(lib_name)s/
-
-git_url = https://github.com/%(user)s/%(lib_name)s/tree/%(branch)s/
-# For Enterprise Github use:
-#git_url = https://github.%(company_name)s.com/%(repo_name)s/%(lib_name)s/tree/%(branch)s/
-
-
-
-lib_path = %(lib_name)s
-title = %(lib_name)s
-
-#Optional advanced parameters
-#Monospace docstings: adds <pre> tags around the doc strings, preserving newlines/indentation.
-#monospace_docstrings = False
-#Test flags: introduce here the test flags you want to use separated by |
+doc_baseurl = /rxnfp/
+git_url = https://github.com/rxn4chemistry/rxnfp/tree/master/ 
+lib_path = rxnfp
+title = rxnfp
 tst_flags = data|cuda|slow
-#Cell spacing: if you want cell blocks in code separated by more than one new line
-#cell_spacing = 
-#Custom jekyll styles: if you want more jekyll styles than tip/important/warning, set them here
-#jekyll_styles = note,warning,tip,important
+
