Fixed github url / use of hf save_vocab function / released version 0.0.5

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-repository: pschwllr # change that to rxn4chemistry/rxnfp
+repository: rxn4chemistry/rxnfp
 output: web
 topnav_title: rxnfp
 site_title: rxnfp
