--- a/docs/_data/topnav.yml
+++ b/docs/_data/topnav.yml
@@ -2,7 +2,7 @@ topnav:
 - title: Topnav
   items:
     - title: github
-      external_url: https://github.com/pschwllr # change that to rxn4chemistry/rxnfp/tree/master/
+      external_url: https://github.com/rxn4chemistry/rxnfp/tree/master/
 
 #Topnav dropdowns
 topnav_dropdowns:
