--- a/settings.ini
+++ b/settings.ini
@@ -8,7 +8,7 @@ author = Philippe Schwaller
 author_email = phs@zurich.ibm.com
 copyright = RXN for Chemistry team / University of Bern
 branch = master
-version = 0.0.5
+version = 0.0.6
 min_python = 3.6
 audience = Developers
 language = English
@@ -18,9 +18,9 @@ status = 2
 requirements = transformers==2.5.1 torch>=1.3.1 scipy==1.4.1 scikit-learn==0.23.1  matplotlib==3.2.2 faerun==0.3.20
 nbs_path = nbs
 doc_path = docs
-doc_host =  https://%(user)s.github.io
+doc_host = https://rxn4chemistry.github.io
 doc_baseurl = /rxnfp/
-git_url = https://github.com/rxn4chemistry/rxnfp/tree/master/ 
+git_url = https://github.com/rxn4chemistry/rxnfp/tree/master/
 lib_path = rxnfp
 title = rxnfp
 tst_flags = data|cuda|slow
