adding optional adapters to smilestransformers models

--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -16,6 +16,9 @@ entries:
       title: Transformer fingerprints
       url: /transformer_fingerprints
     - output: web,pdf
+      title: SmilesTransformer models
+      url: /models
+    - output: web,pdf
       title: Fingerprint generation
       url: /generate_fingerprints
     - output: web,pdf
