--- a/settings.ini
+++ b/settings.ini
@@ -23,5 +23,5 @@ doc_baseurl = /rxnfp/
 git_url = https://github.com/rxn4chemistry/rxnfp/tree/master/
 lib_path = rxnfp
 title = rxnfp
-tst_flags = data|cuda|slow
+tst_flags = data|cuda|slow|optional
 
