--- a/settings.ini
+++ b/settings.ini
@@ -15,7 +15,7 @@ language = English
 custom_sidebar = True
 license = mit
 status = 2
-requirements = transformers>=2.5.1 torch>=1.3.1 scipy==1.4.1 scikit-learn==0.23.1  matplotlib==3.2.2 faerun==0.3.20
+requirements = transformers>=2.5.1,<4 torch>=1.3.1 scipy==1.4.1 scikit-learn==0.23.1  matplotlib==3.2.2 faerun==0.3.20
 nbs_path = nbs
 doc_path = docs
 doc_host = https://rxn4chemistry.github.io
