--- a/settings.ini
+++ b/settings.ini
@@ -8,14 +8,14 @@ author = Philippe Schwaller
 author_email = phs@zurich.ibm.com
 copyright = RXN for Chemistry team / University of Bern
 branch = master
-version = 0.0.9
+version = 0.1.0
 min_python = 3.6
 audience = Developers
 language = English
 custom_sidebar = True
 license = mit
 status = 2
-requirements = transformers>=2.5.1,<4 torch>=1.3.1,<1.8 scipy==1.4.1 scikit-learn==0.23.1  matplotlib==3.2.2 faerun==0.3.20
+requirements = transformers>=4.5.0 torch>=1.6 scipy==1.4.1 scikit-learn==0.23.1  matplotlib==3.2.2 faerun==0.3.20
 nbs_path = nbs
 doc_path = docs
 doc_host = https://rxn4chemistry.github.io
